--- a/style.css
+++ b/style.css
@@ -1,8 +1,75 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
     display: flex;
     justify-content: space-between;
+}
+
+/* ----------------------------------------------- */
+/*  CLASSE RESPONSÁVEL POR CENTRALIZAR ELEMENTOS  */
+
+.centralizar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* ----------------------------------------------- */
+
+.menu-principal {
+    width: 100%;
+    height: 52px;
+    border-bottom: 1px solid #dadada;
+    padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    background-color: gray;
+    color: white;
+}
+
+.menu-principal nav {
+    width: 30%;
+    height: 100%;
+}
+
+.menu-principal nav ul {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+li {
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+main {
+    width: 100%;
+}
+
+.div-boletim {
+    width: 100%;
+    height: 100vh;
+    display: none;
+    transition: 500ms linear;
+}
+
+.ver-boletim {
+    display: flex;
+    transition: 500ms linear;
 }
 
 table {
@@ -18,4 +85,34 @@ td,th {
 th{
     background-color: gray;
     color: white;
+}
+
+footer {
+    width: 100%;
+    height: 45px;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    position: fixed;
+    bottom: 0;
+}
+
+footer div {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+span {
+    font-style: italic;
+}
+
+a {
+    text-decoration: none;
+    color:  black;
 }
